tests/ui/traits/next-solver/object-projection-with-unsatisfied-bound-2.next.stderr
error[E0277]: the trait bound `(dyn Callback<T> + 'static): Foo` is not satisfied
  --> $DIR/object-projection-with-unsatisfied-bound-2.rs:20:14
   |
LL | impl<T: Foo> Bar<dyn Callback<T>> {
   |              ^^^^^^^^^^^^^^^^^^^^ the trait `Foo` is not implemented for `(dyn Callback<T> + 'static)`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/object-projection-with-unsatisfied-bound-2.rs:10:1
   |
LL | trait Foo {
   | ^^^^^^^^^
note: required by a bound in `Bar`
  --> $DIR/object-projection-with-unsatisfied-bound-2.rs:16:15
   |
LL | struct Bar<T: Foo + ?Sized> {
   |               ^^^ required by this bound in `Bar`

error[E0277]: the trait bound `(dyn Callback<T> + 'static): Foo` is not satisfied
  --> $DIR/object-projection-with-unsatisfied-bound-2.rs:22:14
   |
LL |     fn event(&self) {
   |              ^^^^^ the trait `Foo` is not implemented for `(dyn Callback<T> + 'static)`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/object-projection-with-unsatisfied-bound-2.rs:10:1
   |
LL | trait Foo {
   | ^^^^^^^^^
note: required by a bound in `Bar`
  --> $DIR/object-projection-with-unsatisfied-bound-2.rs:16:15
   |
LL | struct Bar<T: Foo + ?Sized> {
   |               ^^^ required by this bound in `Bar`

error[E0618]: expected function, found `Box<(dyn Callback<(dyn Callback<T> + 'static)> + 'static)>`
  --> $DIR/object-projection-with-unsatisfied-bound-2.rs:24:9
   |
LL |         (self.callback)(any(), any());
   |         ^^^^^^^^^^^^^^^--------------
   |         |
   |         call expression requires function

error[E0277]: the trait bound `(dyn Callback<T> + 'static): Foo` is not satisfied
  --> $DIR/object-projection-with-unsatisfied-bound-2.rs:24:9
   |
LL |         (self.callback)(any(), any());
   |         ^^^^^^^^^^^^^^^ the trait `Foo` is not implemented for `(dyn Callback<T> + 'static)`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/object-projection-with-unsatisfied-bound-2.rs:10:1
   |
LL | trait Foo {
   | ^^^^^^^^^

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0277, E0618.
For more information about an error, try `rustc --explain E0277`.
